<resources>
    <string name="app_name">SuppLine</string>
    <string name="suppline_title">SuppLinE</string>
    <string name="snooze">Snooze</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_supplement">Add supplement</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="exceed_max_length_x">Max text length is %1$s</string>
    <string name="accept">Accept</string>
    <string name="description">Description</string>
    <string name="optional">Optional</string>
    <string name="suppline_X">SuppLine [%1$d]</string>
    <string name="time_to_consume_X">Time to consume: %1$s</string>
    <string name="set_notification">Set notification</string>
    <string name="channel_description">SuppLine App notifications</string>
    <string name="toggle_consumed_state">Toggle consumed state</string>
    <string name="keyboard_arrow_up">Keyboard Arrow Up</string>
    <string name="keyboard_arrow_down">Keyboard Arrow Down</string>
    <string name="permission_denied">Allow notifications to use this feature.</string>
    <string name="permission_denied_app_in_background">Cannot set notification. Please check app permission.</string>
    <string name="unknown_error_try_again_later">Unknown error, please try again later.</string>
    <string name="no_items_to_display">No items to display.</string>
    <string name="select_consumed_test_tag">select_consumed_test_tag</string>
</resources>